Fix not removing whitespaces from users range values.

--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,10 @@ img {
     color: white;
 }
 
+#loadingMessage {
+    margin-bottom: 0;
+}
+
 .stackedElement {
     position: absolute;
     top: 0;
